# yt-dlp-guitk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yaml  worker.py
scripts/: build_executable.sh  cleanup_keychain.sh  notarize_app.sh  notarize_app_local.sh  prepare_artifacts.py  setup_keychain.sh  version.sh
tests/: test_app.py
yt_dlp_guitk/: __main__.py  app.py
yt_dlp_guitk/gui/components/: simple_widget.py
yt_dlp_guitk/gui/page/: __init__.py  downloads_page.py  home_page.py  settings_page.py
yt_dlp_guitk/gui/window/: base_window.py  debug_window.py  main_window.py  settings_window.py
yt_dlp_guitk/yt_dlp/: __init__.py
