[tool.poetry]
name = "yt-dlp-guitk"
version = "0.0.1a1"
description = "A GUI wrapper over yt-dlp using guitk"
authors = ["Kevin Romero Peces-Barba <hello@kevinrpb.me>"]
license = "MIT"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yt-dlp-guitk = 'yt_dlp_guitk.app:main'

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
guitk = "^0.4.4"
yt-dlp = "^2024.7.8"

platformdirs = "^4.2.2"
[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
ruff = "^0.2.0"
coverage = "^7.4.1"
pre-commit = "^3.6.0"
pip-audit = "^2.7.0"
pyright = "^1.1.351"

[tool.poetry-pyinstaller-plugin]
version = "6.9.0"

[tool.poetry-pyinstaller-plugin.scripts.yt-dlp-guitk]
source = "yt_dlp_guitk/__main__.py"
type = "onefile"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
extend-exclude = [".joblib_cache"]
target-version = "py311"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "C90", # mccabe complexity
]
ignore = [
  "E501", # line too long, handled by black
  "D203", # 1 blank line required before class docstring
]
fixable = ["ALL"]
unfixable = []

[tool.pyright]
venvPath = "."
venv = ".venv"
